# graphic_sPikes

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
examples/: config.example.yaml  ejemplo_clase.pli  ejemplo_clase_facil.pli  example_snps.pli  minimal_snps.pli  multi_neuron_snps.pli
spike_p_lingua_visualizer/: .env.example  README.md  requirements.txt
spike_p_lingua_visualizer/src/: models.py  parser_xml.py  simulator.py
spike_p_lingua_visualizer/tests/: test_compiler_mock.py  test_parser_pli.py
src/: compiler.py  config.py  exporters.py  graph_builder.py  models.py  parser_official_spiking.py  parser_pli.py  plingua_dialect.py  simulator.py
tests/: test_compiler_mock.py  test_exporters.py  test_graph_builder.py  test_parser_official_spiking.py  test_parser_pli.py  test_plingua_dialect.py  test_simulator.py
tools/plingua/: plingua  plingua_runner  plingua_sim
