[project]
name = "spike-p-lingua-visualizer"
version = "0.1.0"
description = "Streamlit visualizer for Spiking Neural P Systems in P-Lingua format."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.3",
    "pandas>=2.2",
    "plotly>=5.22",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "streamlit>=1.35",
]

[dependency-groups]
dev = [
    "black>=24.4",
    "pytest>=8.2",
    "ruff>=0.4",
]

[tool.uv]
package = false

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
